# SerialRecommenderProject

./: .gitignore  README.md  pyproject.toml  requirements.txt  test.py
app/: app.py
chroma_db/4018ed9b-4566-474a-aa26-71f634c8b090/: index_metadata.pickle
config/: config.py
data/: HindiSerials.csv  HindiSerials_updated.csv
pipeline/: build_pipeline.py  pipeline.py
src/: data_loader.py  prompt_template.py  recommender.py  vector_store.py
